--- a/LabAccounting/Views/Shared/_Layout.cshtml
+++ b/LabAccounting/Views/Shared/_Layout.cshtml
@@ -35,12 +35,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Home", "Index", "Journal", new { area = "" }, new { @class = "navbar-brand" })
             </div>
 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("First", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Test", "Index", "Journal")</li>
                 </ul>
             </div>
         </div>
